# PropellerLab

./: .gitignore  QUICK_START_CN.md  README.md  UI_INPUT_DEFINITIONS_CN.md  pyproject.toml  requirements.txt
data/: README.md
examples/: sample_geometry.csv  sample_polar.csv  sample_xfoil_polar.csv
propeller_lab/: __init__.py  main.py
propeller_lab/core/: __init__.py  bemt.py  design.py  export.py  geometry.py  models.py  numerics.py  optimizer.py  polar.py  storage.py  xfoil_runner.py
propeller_lab/ui/: app_state.py  main_window.py  optimization_worker.py  plot_widgets.py  xfoil_worker.py
tests/: test_core_smoke.py  test_design.py  test_low_speed_static.py  test_optimizer.py  test_pitch_angle_input.py  test_polar.py  test_reynolds_range.py  test_storage.py  test_xfoil_parser.py
