[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "propeller-lab"
version = "0.1.0"
description = "PySide6 desktop propeller blade-element and BEMT calculator."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6",
  "matplotlib",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
